python-os-collect-config (0.1.14-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 14 Apr 2014 23:44:47 +0800

python-os-collect-config (0.1.11-1) experimental; urgency=low

  * Initial release. (Closes: #732173)

 -- Thomas Goirand <zigo@debian.org>  Sun, 16 Mar 2014 16:14:56 +0800