@@ -8,24 +8,24 @@ Uploaders: Julien Danjou <acid@debian.org>,
 Build-Depends: debhelper (>= 9),
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
-               python-pbr (>=0.5.21),
+               python-pbr (>= 0.6),
                python-setuptools
 Build-Depends-Indep: python-anyjson (>= 0.3.3),
                      python-coverage (>= 3.6),
                      python-eventlet (>= 0.13.0),
                      python-fixtures (>= 0.3.14),
                      python-hacking (>= 0.8.0),
-                     python-iso8601 (>= 0.1.8),
-                     python-keystoneclient (>= 1:0.4.2),
+                     python-iso8601 (>= 0.1.9),
+                     python-keystoneclient (>= 1:0.7.0),
                      python-lxml,
                      python-oslo.config (>= 1.1.0),
                      python-requests (>= 1.1),
-                     python-six (>= 1.4.1),
+                     python-six (>= 1.5.2),
                      python-sphinx,
-                     python-subunit,
+                     python-subunit (>= 0.0.18),
                      python-testscenarios (>= 0.4),
-                     python-testtools (>= 0.9.32),
-                     testrepository (>= 0.0.17),
+                     python-testtools (>= 0.9.34),
+                     testrepository (>= 0.0.18),
                      subunit (>= 0.0.18)
 Standards-Version: 3.9.5
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-os-collect-config.git
@@ -37,12 +37,13 @@ Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
 Depends: python-anyjson (>= 0.3.3),
          python-eventlet (>= 0.13.0),
-         python-iso8601 (>= 0.1.8),
-         python-keystoneclient (>= 1:0.4.2),
+         python-iso8601 (>= 0.1.9),
+         python-keystoneclient (>= 1:0.7.0),
          python-lxml,
          python-oslo.config (>= 1.1.0),
+         python-pbr (>= 0.6),
          python-requests (>= 1.1),
-         python-six (>= 1.4.1),
+         python-six (>= 1.5.2),
          ${misc:Depends},
          ${python:Depends}
 Recommends: ${python:Recommends}
