@@ -1,6 +1,8 @@
 python-os-collect-config (0.1.14-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Reviewed (build-)depends.
+  * Rewrote testr calls.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 14 Apr 2014 23:44:47 +0800
 
